--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>Infosec Challenges</title>
     <meta name="" content="Free Code Camp - Infosec Challenges">
-    <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
